# SOUSA

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: codeql.yml  docs.yml  test.yml
LIMITATIONS/: index.html
api/: index.html
api/audio-aug/: index.html
api/audio-synth/: index.html
api/labels/: index.html
api/midi-gen/: index.html
api/pipeline/: index.html
api/profiles/: index.html
api/rudiments/: index.html
api/validation/: index.html
contributing/: index.html
dataset_gen/: __init__.py
dataset_gen/audio_analysis/: __init__.py  midi_alignment.py  onsets.py  views.py
dataset_gen/audio_aug/: __init__.py  chain.py  degradation.py  mic.py  pipeline.py  room.py
dataset_gen/audio_synth/: __init__.py  sfz_parser.py  sfz_renderer.py  sfz_synthesizer.py  synthesizer.py
dataset_gen/hub/: __init__.py  archiver.py  uploader.py
dataset_gen/labels/: __init__.py  compute.py  groove.py  schema.py
dataset_gen/midi_gen/: __init__.py  articulations.py  generator.py
dataset_gen/pipeline/: __init__.py  checkpoint.py  distributed.py  generate.py  parallel.py  splits.py  storage.py
dataset_gen/profiles/: __init__.py  archetypes.py  sampler.py
dataset_gen/rudiments/: __init__.py  loader.py  schema.py
dataset_gen/rudiments/definitions/: 01_single_stroke_roll.yaml  02_single_stroke_four.yaml  03_single_stroke_seven.yaml  04_multiple_bounce_roll.yaml  05_triple_stroke_roll.yaml  06_double_stroke_open_roll.yaml  07_five_stroke_roll.yaml  08_six_stroke_roll.yaml  09_seven_stroke_roll.yaml  10_nine_stroke_roll.yaml  11_ten_stroke_roll.yaml  12_eleven_stroke_roll.yaml  13_thirteen_stroke_roll.yaml  14_fifteen_stroke_roll.yaml  15_seventeen_stroke_roll.yaml  16_single_paradiddle.yaml  17_double_paradiddle.yaml  18_triple_paradiddle.yaml  19_paradiddle_diddle.yaml  20_flam.yaml  21_flam_accent.yaml  (+19 more)
dataset_gen/validation/: __init__.py  analysis.py  audio_check.py  realism.py  report.py  verify.py
docs/: DATA_FORMAT.md  LIMITATIONS.md  USAGE.md  VALIDATION.md  index.md
docs/api/: audio-aug.md  audio-synth.md  index.md  labels.md  midi-gen.md  pipeline.md  profiles.md  rudiments.md  validation.md
docs/contributing/: index.md
docs/examples/: feature-extraction.md  filtering.md  hierarchical-labels.md  index.md  pytorch-dataloader.md
docs/getting-started/: index.md  installation.md  loading.md  quickstart.md
docs/plans/: 2025-01-27-hf-upload-tar-sharding-design.md  2025-01-27-tar-sharding-implementation.md  2026-02-17-audio-analysis-implementation.md  2026-02-17-audio-analysis-tooling-design.md  2026-02-17-rudiment-engineering-specs-design.md  2026-02-17-rudiment-engineering-specs-implementation.md  2026-02-18-pre-deployment-cleanup-design.md  2026-02-18-pre-deployment-cleanup-implementation.md  2026-02-18-rudiment-definition-bugs-design.md  2026-02-18-rudiment-definition-bugs-implementation.md  2026-02-19-huggingface-publish-design.md  2026-02-19-huggingface-publish-plan.md  2026-02-20-parquet-hub-migration-design.md  2026-02-20-parquet-hub-migration-plan.md
docs/reference/: architecture.md  audio-processing.md  data-format.md  index.md  rudiment-schema.md  score-computation.md
docs/stylesheets/: extra.css
docs/user-guide/: augmentation.md  filtering.md  generation.md  index.md  ml-training.md  validation.md
examples/: feature_extraction.py  filtering.py  hierarchical_labels.py  index.html  pytorch_dataloader.py
examples/baselines/: __init__.py  config.py  models.py  multitask.py  rudiment_classification.py  score_regression.py  skill_classification.py  training.py
examples/feature-extraction/: index.html
examples/filtering/: index.html
examples/hierarchical-labels/: index.html
examples/pytorch-dataloader/: index.html
experiments/: __init__.py  augmentation_ablation.py  score_analysis.py  soundfont_ablation.py  split_validation.py
experiments/results/: experiment_summary.md  score_correlations.json
getting-started/: index.html
getting-started/installation/: index.html
getting-started/loading/: index.html
getting-started/quickstart/: index.html
notebooks/: getting_started.ipynb
output/dataset/: README.md
plans/2025-01-27-hf-upload-tar-sharding-design/: index.html
plans/2025-01-27-tar-sharding-implementation/: index.html
plans/2026-02-19-huggingface-publish-design/: index.html
plans/2026-02-19-huggingface-publish-plan/: index.html
plans/2026-02-20-parquet-hub-migration-design/: index.html
plans/2026-02-20-parquet-hub-migration-plan/: index.html
reference/: index.html
reference/architecture/: index.html
reference/audio-processing/: index.html
reference/data-format/: index.html
reference/rudiment-schema/: index.html
reference/score-computation/: index.html
scripts/: analyze_audio.py  check_generation.py  dataset_stats.py  generate_clean_dataset.py  generate_dataset.py  generate_plots.py  prove_utility.py  push_to_hub.py  run_experiments.py  setup_sfz.py  setup_soundfonts.py
scripts/templates/: validation_report.html
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/api/: index.html
site/contributing/: index.html
site/examples/: index.html
site/getting-started/: index.html
site/limitations/: index.html
site/reference/: index.html
site/search/: search_index.json
site/user-guide/: index.html
tests/: __init__.py  test_audio_analysis.py  test_audio_aug.py  test_audio_synth_velocity.py  test_hub_archiver.py  test_hub_integration.py  test_hub_uploader.py  test_labels.py  test_midi_gen.py  test_parallel.py  test_pipeline.py  test_profiles.py  test_rudiments.py  test_validation.py
user-guide/: index.html
user-guide/augmentation/: index.html
user-guide/filtering/: index.html
user-guide/generation/: index.html
user-guide/ml-training/: index.html
user-guide/validation/: index.html
(+111 files in other folders)
